--- a/Covid_Cases_Predictor-main/csv_process.ipynb
+++ b/Covid_Cases_Predictor-main/csv_process.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,21 +59,32 @@
     "    for file in files:\n",
     "        if file[-4:] == \".csv\": \n",
     "            df = pd.read_csv(os.path.join(root, file))\n",
-    "            name = df[\"areaName\"][5]\n",
-    "            df = df.dropna().drop(df.columns[:4], axis=1)[::-1].reset_index(drop=True)\n",
-    "            X = np.array(df)\n",
-    "            y = np.array(df[\"newCasesBySpecimenDate\"]/df[\"newVirusTestsBySpecimenDate\"])\n",
-    "            county_dict[name] = (X, y)"
+    "            df = df.dropna()\n",
+    "            if len(df):\n",
+    "                name = df[\"areaName\"][5]\n",
+    "                df = df.drop(df.columns[:4], axis=1)[::-1].reset_index(drop=True)\n",
+    "                X = np.array(df)\n",
+    "                y = np.array(df[\"newCasesBySpecimenDate\"]/df[\"newVirusTestsBySpecimenDate\"])\n",
+    "                county_dict[name] = (X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147\n"
+     ]
+    }
+   ],
    "source": [
     "for county in county_dict:\n",
-    "    X, y = county_dict[county]"
+    "    X, y = county_dict[county]\n",
+    "print(len(county_dict))"
    ]
   },
   {
