--- a/Covid_Cases_Predictor-main/Covid_Predictor_Main_BUN.ipynb
+++ b/Covid_Cases_Predictor-main/Covid_Predictor_Main_BUN.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 97,
    "id": "808f1719",
    "metadata": {},
    "outputs": [],
@@ -546,27 +546,30 @@
     "    past_values = 50\n",
     "    X, y = get_data(i)\n",
     "    y_future = model.predict(X[-1:]*1000)/1000\n",
+    "    y_future = y_future[0]\n",
+    "    for j, val in enumerate(y_future):\n",
+    "        if val < 0: y_future[j] = 0\n",
     "    prediction_dict[list_of_df[i][0]] = y_future"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 98,
    "id": "02d83153",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.11683659, 0.0858916 , 0.08505923, 0.10670617, 0.11082837,\n",
-       "        0.09797741, 0.09653384, 0.09644207, 0.08232884, 0.06982758,\n",
-       "        0.08843001, 0.09066327, 0.06548899, 0.06731322, 0.09379801,\n",
-       "        0.07478201, 0.05365488, 0.07418613, 0.08373245, 0.07528676,\n",
-       "        0.04893074, 0.05086003, 0.04168411, 0.05681954, 0.06157288,\n",
-       "        0.07679225, 0.04848178, 0.05453162, 0.040218  , 0.04170418]])"
+       "array([0.11683659, 0.0858916 , 0.08505923, 0.10670617, 0.11082837,\n",
+       "       0.09797741, 0.09653384, 0.09644207, 0.08232884, 0.06982758,\n",
+       "       0.08843001, 0.09066327, 0.06548899, 0.06731322, 0.09379801,\n",
+       "       0.07478201, 0.05365488, 0.07418613, 0.08373245, 0.07528676,\n",
+       "       0.04893074, 0.05086003, 0.04168411, 0.05681954, 0.06157288,\n",
+       "       0.07679225, 0.04848178, 0.05453162, 0.040218  , 0.04170418])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,8 +580,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "02286aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 0.20172722025749484\n"
+     ]
+    }
+   ],
+   "source": [
+    "max=0\n",
+    "min=100\n",
+    "for county in prediction_dict:\n",
+    "    max = np.max(np.array([max, np.max(prediction_dict[county])]))\n",
+    "    min = np.min(np.array([min, np.min(prediction_dict[county])]))\n",
+    "print(min, max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5978558",
    "metadata": {},
    "outputs": [],
    "source": []
