--- a/Covid_Cases_Predictor-main/Covid_Predictor_Main_BUN.ipynb
+++ b/Covid_Cases_Predictor-main/Covid_Predictor_Main_BUN.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "id": "f25a8b6b",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 111,
    "id": "8b4c50e0",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 112,
    "id": "00d9d909",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "10"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 113,
    "id": "a212af53",
    "metadata": {},
    "outputs": [
@@ -105,10 +105,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x20aaa5cacd0>]"
+       "[<matplotlib.lines.Line2D at 0x20ab813a070>]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 114,
    "id": "0a28aff2",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 115,
    "id": "e1b5d806",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        " -2.918737250682647e-06]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 116,
    "id": "0609c595",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 117,
    "id": "58a4416d",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "max    1.139453e+01  3.874609e+00  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "id": "1117b176",
    "metadata": {},
    "outputs": [],
@@ -517,18 +517,6 @@
     "\n",
     "\n",
     "def pipeline(model, county, label):\n",
-    "    # def plot_multistep(y, every=1, ax=None, palette_kwargs=None):\n",
-    "    #     palette_kwargs_ = dict(palette='husl', n_colors=16, desat=None)\n",
-    "    #     if palette_kwargs is not None:\n",
-    "    #         palette_kwargs_.update(palette_kwargs)\n",
-    "    #     palette = sns.color_palette(**palette_kwargs_)\n",
-    "    #     if ax is None:\n",
-    "    #         fig, ax = plt.subplots()\n",
-    "    #     ax.set_prop_cycle(plt.cycler('color', palette))\n",
-    "    #     for date, preds in y[::every].iterrows():\n",
-    "    #         preds.index = pd.period_range(start=date, periods=len(preds))\n",
-    "    #         preds.plot(ax=ax)\n",
-    "    #     return ax\n",
     "\n",
     "    def make_lags(ts, lags, lead_time=1):\n",
     "        return pd.concat(\n",
@@ -561,27 +549,13 @@
     "    \n",
     "    model.fit(X_train, y_train)\n",
     "\n",
-    "    y_fit = pd.DataFrame(model.predict(X_train), index=X_train.index, columns=y.columns)\n",
-    "    y_pred = pd.DataFrame(model.predict(X_test), index=X_test.index, columns=y.columns)\n",
     "\n",
-    "    # train_rmse = mean_squared_error(y_train, y_fit, squared=False)\n",
-    "    # test_rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
-    "    # print((f\"Train RMSE: {train_rmse:.2f}\\n\" f\"Test RMSE: {test_rmse:.2f}\"))\n",
-    "\n",
-    "    #palette = dict(palette='husl', n_colors=64)\n",
-    "    #fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(11, 6))\n",
-    "    #ax1 = flu_trends.FluVisits[y_fit.index].plot(**plot_params, ax=ax1)\n",
-    "    #ax1 = plot_multistep(y_fit, ax=ax1, palette_kwargs=palette)\n",
-    "    #_ = ax1.legend(['FluVisits (train)', 'Forecast'])\n",
-    "    #ax2 = flu_trends.FluVisits[y_pred.index].plot(**plot_params, ax=ax2)\n",
-    "    #ax2 = plot_multistep(y_pred, ax=ax2, palette_kwargs=palette)\n",
-    "    #_ = ax2.legend(['FluVisits (test)', 'Forecast'])\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "id": "07f7e401",
    "metadata": {},
    "outputs": [],
@@ -591,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 120,
    "id": "c0d636fb",
    "metadata": {},
    "outputs": [
@@ -713,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 121,
    "id": "2607ea9e",
    "metadata": {},
    "outputs": [],
@@ -725,18 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "f567ea9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('model','wb') as f:\n",
-    "    pickle.dump(model,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 122,
    "id": "808f1719",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 123,
    "id": "02d83153",
    "metadata": {},
    "outputs": [],
